feat: add email search api
